final, porém com comentários
adição de comentários, e como usá-los.

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -29,8 +29,21 @@
     <script>
         
         window.alert ('Minha primeira mensagem')
+        //aparece uma mensagem para o usuário
+
         window.confirm ('Está gostando de JS?')
+        //pede uma confirmação pro usuário
+
         window.prompt ('Qual é o seu nome?')
+        //faz uma pergunta para o usuário
+        
+
+        //na mesma linha que essas duas barras, é um comentário de uma linha só
+
+        /*
+        tudo que está dentro desse símbolo é um comentário
+        que fica em mais de uma linha
+        */
 
     </script>
 
